# iroc_bridge

./: .gitignore  .gitman.yml  CMakeLists.txt  IROC_Bridge_Signaling_Protocol_Specification.html  IROC_Bridge_Signaling_Protocol_Specification.md  README.md  nodelets.xml  package.xml
config/: config.yaml
docs/: IROC_Bridge_Signaling_Protocol_Specification.md  README.md  _config.yml  index.html  index.md
include/: crow
include/iroc_bridge/: common_handlers.h  json_var_parser.h
installation/: install.sh
json_examples/: autonomy_test.json  change_mission_state.json  coverage_mission.json  coverage_mission_2.json  land_home.json  mission_pause.json  mission_start.json  new_waypoint_mission.json  new_waypoint_mission_2.json  set_obstacle.json  set_obstacle_amsl_height.json  set_obstacle_latlon.json  set_safety_area.json  set_safety_area_agl_height.json  set_safety_area_latlon.json  waypoint_mission.json
json_examples/missions/: autonomy_test.json  coverage.json  heading.json  one_drone.json  sequential_subtask.json  two_drones.json  waypoint.json
launch/: iroc_bridge.launch  iroc_bridge.launch.py  ros2json_bridge.launch
scripts/: echo_server.sh  mission_pause.sh  path_test.sh  run_nimbro.py
src/: iroc_bridge.cpp  json_var_parser.cpp  ros2json_bridge.cpp
tmux/: session.yml
tmux/mrs_one_drone/: example_change_mission_state.json  example_waypoint_mission.json  session.yml
tmux/mrs_one_drone/config/: test_world.yaml
tmux/mrs_three_drones/: session.yml
tmux/mrs_three_drones/config/: network_config.yaml  simulator.yaml
tmux/one_drone/: session.yml
tmux/one_drone_error/: session.yml
tmux/one_drone_error/config/: custom_config.yaml
tmux/three_drones/: session.yml
tmux/two_drones/: session.yml
tmux/two_drones/config/: rviz.rviz
