<?xml version="1.0"?>
<package format="2">

  <name>iroc_bridge</name>
  <version>1.0.0</version>
  <description>Node to translate messages from ROS to backend and back</description>

  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>
  <author email="spurny@fly4future.com">Vojtech Spurny</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_robot_diagnostics</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_mission_manager</depend>
  <depend>iroc_fleet_manager</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
