<?xml version="1.0"?>
<package format="3">

  <name>iroc_bridge</name>
  <version>2.0.0</version>
  <description>Node to translate messages from ROS to backend and back</description>

  <maintainer email="spurny@fly4future.com">Vojtech Spurny</maintainer>
  <author email="spurny@fly4future.com">Vojtech Spurny</author>
  <author email="rivermar@fly4future.com">Marlon Rivera</author>
  <author email="chitiva@fly4future.com">Cristian Chitiva</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_action</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>mrs_msgs</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_robot_diagnostics</depend>
  <depend>iroc_fleet_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
